# human

./: LICENSE  README.md  protocol.yaml  sol.md  world-lore.yaml
characters/: README.md  convergence.yaml  dark.yaml  elena-zheng.yaml  elias-thorne.yaml  james-kessler.yaml  james-park.yaml  jark.yaml  kasimir-volkov.yaml  keiko-tanaka.yaml  kwame-osei.yaml  lira.yaml  margot-chen.yaml  sarah-wong.yaml  the-unbroken.yaml  the-voice.yaml  thomas-ashford.yaml  triumvirate.yaml  vera-castellanos.yaml  yara-osei-xii.yaml  yara-osei-xiii.yaml  yara-osei.yaml
era/: 01-great-fragmentation.md  02-schism.md  03-awakening.md  04-expansion.md  05-zenith.md  06-the-fall.md  README.md  epilogue.md  summary-table.md  thematic-summary.md
factions/: team_a.yaml
story/dark-and-jark/: README.md  ratings.yaml  v1-canonical-descent.md  v2-submerge.md  v3-bearer.md
story/dark-exploration-game/: README.md  index.html  package-lock.json  package.json
story/dark-exploration-game/src/: main.js  styles.css
story/dark-exploration-game/src-tauri/: Cargo.toml  tauri.conf.json
story/dark-exploration-game/src-tauri/src/: lib.rs  main.rs
story/jark-exploration-game/: README.md  index.html  package-lock.json  package.json
story/jark-exploration-game/src/: main.js  styles.css
story/jark-exploration-game/src-tauri/: Cargo.toml  tauri.conf.json
story/jark-exploration-game/src-tauri/src/: lib.rs  main.rs
story/yark-submarine-miner/: README.md  index.html  package-lock.json  package.json
story/yark-submarine-miner/src/: main.js  (+1 more)
story/yark-submarine-miner/src-tauri/: Cargo.toml  tauri.conf.json
story/yark-submarine-miner/src-tauri/src/: lib.rs  main.rs
