[package]
name = "dark-resonance-path"
version = "0.1.0"
description = "A minimalist puzzle RPG set in Human-Ever-After."
authors = ["susulliang"]
edition = "2021"

[lib]
name = "dark_resonance_path_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
