[package]
name = "yark-submarine-miner"
version = "0.1.0"
description = "An action RPG submarine mining game set in Human-Ever-After."
authors = ["susulliang"]
edition = "2021"

[lib]
name = "yark_submarine_miner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
